--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "./lib/node",
     "target": "ES2015",
     "module": "CommonJS",
     "esModuleInterop": true,
